fixed error causing same game board to load. Changed action bar to look better on smaller viewports

--- a/css/style.css
+++ b/css/style.css
@@ -2,34 +2,21 @@
  html,
  body {
      height: 100%;
+     min-width: 450px;
  }
  
  #pageContainer {
      display: flex;
+     flex-direction: column;
      justify-content: space-between;
      background: radial-gradient(rgb(150, 150, 230), rgb(80, 80, 220));
-     min-height: 100%;
-     min-width: 100%;
+     height: 100%;
+     width: 100%;
      background-size: cover;
  }
  
- #welcome {
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
-     flex-direction: column;
-     min-width: 400px;
-     max-width: 400px;
-     height: 450px;
-     background: radial-gradient(rgb(150, 230, 190), rgb(81, 214, 148));
-     border-radius: 5px;
-     margin-top: 35px;
-     margin-left: auto;
-     margin-right: auto;
- }
- 
  #gameContainer {
-     display: none;
+     display: flex;
      justify-content: space-around;
      align-items: center;
      flex-wrap: wrap;
@@ -39,7 +26,7 @@
      height: 400px;
      background: radial-gradient(rgb(150, 230, 190), rgb(81, 214, 148));
      border-radius: 5px;
-     margin-top: 35px;
+     margin-top: 20px;
      margin-left: auto;
      margin-right: auto;
  }
@@ -54,36 +41,36 @@
      cursor: pointer;
  }
  
- #leftBar {
-     display: none;
-     flex-direction: column;
-     justify-content: flex-start;
-     align-items: center;
-     min-width: 200px;
-    max-width: 200px;
-     height: 250px;
-     margin-top: 35px;
-     background: radial-gradient(rgb(150, 230, 190), rgb(81, 214, 148));
-     border-radius: 5px;
+ .gameSquare > h3:hover,
+ h4:hover,
+ .buttons > p:hover {
+     color: red;
+     cursor: pointer;
  }
  
  #actionBar {
-     display: none;
      flex-direction: column;
-     justify-content: space-between;
-     align-items: center;
-     min-width: 200px;
-     max-width: 200px;
-     height: 250px;
-     margin-top: 35px;
+     justify-content: flex-start;
+     padding-left: 10px;
+     padding-right: 10px;
+     min-width: 400px;
      background: radial-gradient(rgb(150, 230, 190), rgb(81, 214, 148));
      border-radius: 5px;
+     margin-top: 20px;
+     margin-left: auto;
+     margin-right: auto;
  }
  
- #buttons {
+ .buttons {
      width: 100%;
      display: flex;
      justify-content: space-around;
+ }
+ 
+ .timeWord,
+ .titleScore {
+     display: flex;
+     justify-content: space-between;
  }
  
  .selected {
@@ -99,14 +86,30 @@
      align-items: center;
      justify-content: space-between;
      flex-direction: column;
-     min-width: 400px;
-     max-width: 400px;
+     width: 400px;
      height: 350px;
      background: radial-gradient(rgb(150, 230, 190), rgb(81, 214, 148));
      border-radius: 5px;
-     margin-top: 35px;
+     margin-top: 20px;
      margin-left: auto;
      margin-right: auto;
+ }
+ 
+ #instructions {
+     display: flex;
+     align-items: center;
+     justify-content: flex-start;
+     flex-direction: column;
+     height: 100%;
+     width: 80%;
+     position: fixed;
+     z-index: 2;
+     top: 0;
+     left: 0;
+     background: radial-gradient(rgb(150, 230, 190), rgb(81, 214, 148));
+     overflow-x: hidden;
+     padding-top: 20px;
+     transition: 0.5s;
  }
  
  h1 {
@@ -129,14 +132,14 @@
      font-family: 'Pangolin', cursive;
  }
  
- .gameSquare > h3:hover,
- h4:hover,
- #buttons > p:hover {
-     color: red;
-     cursor: pointer;
- }
- 
  p {
      font-size: 1.25em;
      font-family: 'Pangolin', cursive;
+     text-align: center;
+ }
+ 
+ @media only screen and (max-width: 675px) {
+     .sidenav {
+         width: 100%;
+     }
  }
